[gd_scene load_steps=20 format=3 uid="uid://bc08rouos7uh7"]

[ext_resource type="Script" uid="uid://bjsshssjuf1e7" path="res://entities/beast/beast.gd" id="1_5r6js"]
[ext_resource type="Texture2D" uid="uid://b5ycmyu3t5flw" path="res://assets/beast/beast_body.png" id="2_cfrmx"]
[ext_resource type="Texture2D" uid="uid://dj7mpg10ta1g6" path="res://assets/beast/beast_teeth.png" id="3_sqs55"]
[ext_resource type="Texture2D" uid="uid://dhxo2qergiebl" path="res://assets/beast/beast_tentacle_01.png" id="4_njpr0"]
[ext_resource type="Texture2D" uid="uid://cg6f26gqsof6q" path="res://assets/beast/beast_tentacle_02.png" id="5_u36e8"]
[ext_resource type="Texture2D" uid="uid://be87jeawxmffo" path="res://assets/beast/beast_tentacle_03.png" id="6_ysd26"]
[ext_resource type="Texture2D" uid="uid://bkkt4iya6im0c" path="res://assets/beast/beast_tentacle_04.png" id="7_almb1"]
[ext_resource type="Texture2D" uid="uid://dfw3yh35me53m" path="res://assets/beast/beast_tentacle_05.png" id="8_lw4la"]
[ext_resource type="Texture2D" uid="uid://jo4q7i87rhqh" path="res://assets/beast/beast_tentacle_06.png" id="9_8vvu5"]
[ext_resource type="Texture2D" uid="uid://b5ix3kyi1q16h" path="res://assets/beast/beast_tentacle_08.png" id="10_3gtxx"]
[ext_resource type="Texture2D" uid="uid://6lslwmcit0ec" path="res://assets/beast/beast_tentacle_07.png" id="10_sqs55"]

[sub_resource type="Animation" id="Animation_b3h1i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 75)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/Teeth:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-6.6666675, 40.952385)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D/Tentacle1:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D/Tentacle2:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D/Tentacle3:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite2D/Tentacle4:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Sprite2D/Tentacle5:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Sprite2D/Tentacle6:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Sprite2D/Tentacle7:rotation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Sprite2D/Tentacle8:rotation")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Sprite2D/Tentacle7:position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(101.90478, 80.00001)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Sprite2D/Tentacle8:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-103.80954, 82.857155)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("Sprite2D/Tentacle6:position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(56.190483, 89.52382)]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Sprite2D/Tentacle5:position")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-48.57143, 86.66668)]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("Sprite2D/Tentacle4:position")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(79.04763, 80.95239)]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("Sprite2D/Tentacle3:position")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-79.04763, 87.61906)]
}
tracks/17/type = "value"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("Sprite2D/Tentacle2:position")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(123.80954, 64.76191)]
}
tracks/18/type = "value"
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/path = NodePath("Sprite2D/Tentacle1:position")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-120, 56.190483)]
}

[sub_resource type="Animation" id="Animation_5r6js"]
resource_name = "appear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.93333334),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 50), Vector2(0, 75)]
}

[sub_resource type="Animation" id="Animation_cfrmx"]
resource_name = "eat"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/Teeth:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.56666666, 0.6666667, 0.73333335, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-6.6666675, 40.952385), Vector2(-6.667, 30), Vector2(-6.667, 28), Vector2(-6.6666675, 40.952385), Vector2(-6.6666675, 40.952385), Vector2(-6.667, 28), Vector2(-6.6666675, 40.952385)]
}

[sub_resource type="Animation" id="Animation_sqs55"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/Tentacle1:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.46666667, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.05934119456780681, 0.029670597283903404, -0.029670597283903404]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/Tentacle2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.73333335),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.029670597283903404, 0.029670597283903404]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/Tentacle3:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.23333333, 0.56666666),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.05934119456780681, -0.04886921905584143]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D/Tentacle4:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.36666667, 0.73333335),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.1186823891356146, 0.03490658503988659]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D/Tentacle5:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6666667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.1186823891356146, 0.09773843811168285]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D/Tentacle6:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.05934119456780681, -0.06457718232378999]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite2D/Tentacle7:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.23333333, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.05934119456780681, -0.05061454830783516]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Sprite2D/Tentacle8:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.26666668, 0.56666666),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.05934119456780681, -0.03316125578789186]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Sprite2D/Tentacle1:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.2, 0.46666667, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-120, 56.190483), Vector2(-119, 56.19), Vector2(-120, 56.19), Vector2(-117, 56.19)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Sprite2D/Tentacle2:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.3, 0.73333335),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(123.80954, 64.76191), Vector2(123, 64.762), Vector2(122, 64.762)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Sprite2D/Tentacle3:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 0.26666668, 0.6, 0.93333334),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-79.04763, 87.61906), Vector2(-79, 87.619), Vector2(-79.5, 87.619), Vector2(-79.0467, 87.61906)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Sprite2D/Tentacle4:position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0, 0.36666667, 0.76666665),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(79.04763, 80.95239), Vector2(78.5, 80.952), Vector2(78.7, 80.952)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Sprite2D/Tentacle5:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-48.57143, 86.66668), Vector2(-48, 86.667), Vector2(-49, 86.667)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("Sprite2D/Tentacle6:position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0, 0.26666668, 0.53333336),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(56.190483, 89.52382), Vector2(57, 89.524), Vector2(58, 89.524)]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Sprite2D/Tentacle7:position")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0, 0.23333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(101.90478, 80.00001), Vector2(101, 80)]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("Sprite2D/Tentacle8:position")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0, 0.26666668, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-103.80954, 82.857155), Vector2(-104.5, 82.857), Vector2(-103.9, 82.857)]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("Sprite2D/Teeth:position")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0, 0.4, 0.56666666, 0.93333334),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-6.6666675, 40.952385), Vector2(-6.667, 39.5), Vector2(-6.667, 39.888515), Vector2(-6.667, 40.952)]
}

[sub_resource type="Animation" id="Animation_njpr0"]
resource_name = "eat_with_idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/Tentacle1:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.46666667, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.05934119456780681, 0.029670597283903404, -0.029670597283903404, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/Tentacle2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.73333335, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.029670597283903404, 0.029670597283903404, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/Tentacle3:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.23333333, 0.56666666, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.05934119456780681, -0.04886921905584143, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D/Tentacle4:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.36666667, 0.73333335, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.1186823891356146, 0.03490658503988659, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D/Tentacle5:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6666667, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.1186823891356146, 0.09773843811168285, 0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D/Tentacle6:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.05934119456780681, -0.06457718232378999, 0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite2D/Tentacle7:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.23333333, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.05934119456780681, -0.05061454830783516, 0.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Sprite2D/Tentacle8:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.26666668, 0.56666666, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.05934119456780681, -0.03316125578789186, 0.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Sprite2D/Tentacle1:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.2, 0.46666667, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-120, 56.190483), Vector2(-119, 56.19), Vector2(-120, 56.19), Vector2(-117, 56.19), Vector2(-120, 56.190483)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Sprite2D/Tentacle2:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.3, 0.73333335, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(123.80954, 64.76191), Vector2(123, 64.762), Vector2(122, 64.762), Vector2(123.80954, 64.76191)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Sprite2D/Tentacle3:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 0.26666668, 0.6, 0.93333334, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-79.04763, 87.61906), Vector2(-79, 87.619), Vector2(-79.5, 87.619), Vector2(-79.0467, 87.61906), Vector2(-79.04763, 87.61906)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Sprite2D/Tentacle4:position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0, 0.36666667, 0.76666665, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(79.04763, 80.95239), Vector2(78.5, 80.952), Vector2(78.7, 80.952), Vector2(79.04763, 80.95239)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Sprite2D/Tentacle5:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-48.57143, 86.66668), Vector2(-48, 86.667), Vector2(-49, 86.667), Vector2(-48.57143, 86.66668)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("Sprite2D/Tentacle6:position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0, 0.26666668, 0.53333336, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(56.190483, 89.52382), Vector2(57, 89.524), Vector2(58, 89.524), Vector2(56.190483, 89.52382)]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Sprite2D/Tentacle7:position")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0, 0.23333333, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(101.90478, 80.00001), Vector2(101, 80), Vector2(101.90478, 80.00001)]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("Sprite2D/Tentacle8:position")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0, 0.26666668, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-103.80954, 82.857155), Vector2(-104.5, 82.857), Vector2(-103.9, 82.857), Vector2(-103.80954, 82.857155)]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("Sprite2D/Teeth:position")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.56666666, 0.6666667, 0.73333335, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-6.6666675, 40.952385), Vector2(-6.667, 30), Vector2(-6.667, 28), Vector2(-6.6666675, 40.952385), Vector2(-6.6666675, 40.952385), Vector2(-6.667, 28), Vector2(-6.6666675, 40.952385)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8gisi"]
_data = {
&"RESET": SubResource("Animation_b3h1i"),
&"appear": SubResource("Animation_5r6js"),
&"eat": SubResource("Animation_cfrmx"),
&"eat_with_idle": SubResource("Animation_njpr0"),
&"idle": SubResource("Animation_sqs55")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5r6js"]
radius = 88.0
height = 298.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5r6js"]
size = Vector2(464, 3874)

[node name="Beast" type="Area2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_5r6js")

[node name="Audio" type="Node2D" parent="."]

[node name="FmodBankLoader" type="FmodBankLoader" parent="Audio"]
bank_paths = ["res://assets/audio/Desktop/Enemies.bank", "res://assets/audio/Desktop/Master.bank"]

[node name="FmodListener2D" type="FmodListener2D" parent="Audio"]

[node name="MonsterRoarAudioEventEmitter" type="FmodEventEmitter2D" parent="Audio"]
event_name = "event:/MonsterRoar"
event_guid = "{e88eaee5-36e9-40e3-a06c-75b0ee6dcceb}"
volume = 2.0

[node name="MonsterAppearAudioEventEmitter" type="FmodEventEmitter2D" parent="Audio"]
event_name = "event:/MonsterAppear"
event_guid = "{7d9287fc-595f-4bc2-956f-c8145ceca9c7}"
volume = 0.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8gisi")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(0, 75)
scale = Vector2(1.05, 1.05)
texture = ExtResource("2_cfrmx")

[node name="Teeth" type="Sprite2D" parent="Sprite2D"]
position = Vector2(-6.6666675, 40.952385)
texture = ExtResource("3_sqs55")

[node name="Tentacle1" type="Sprite2D" parent="Sprite2D"]
position = Vector2(-120, 56.190483)
texture = ExtResource("4_njpr0")

[node name="Tentacle2" type="Sprite2D" parent="Sprite2D"]
position = Vector2(123.80954, 64.76191)
texture = ExtResource("5_u36e8")

[node name="Tentacle3" type="Sprite2D" parent="Sprite2D"]
position = Vector2(-79.04763, 87.61906)
texture = ExtResource("6_ysd26")

[node name="Tentacle4" type="Sprite2D" parent="Sprite2D"]
position = Vector2(79.04763, 80.95239)
texture = ExtResource("7_almb1")

[node name="Tentacle5" type="Sprite2D" parent="Sprite2D"]
z_as_relative = false
position = Vector2(-48.57143, 86.66668)
texture = ExtResource("8_lw4la")

[node name="Tentacle6" type="Sprite2D" parent="Sprite2D"]
z_as_relative = false
position = Vector2(56.190483, 89.52382)
texture = ExtResource("9_8vvu5")

[node name="Tentacle7" type="Sprite2D" parent="Sprite2D"]
z_as_relative = false
position = Vector2(101.90478, 80.00001)
texture = ExtResource("10_sqs55")

[node name="Tentacle8" type="Sprite2D" parent="Sprite2D"]
z_as_relative = false
position = Vector2(-103.80954, 82.857155)
texture = ExtResource("10_3gtxx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 70)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_5r6js")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(-7.999709, -1867)
rotation = -3.1415925
shape = SubResource("RectangleShape2D_5r6js")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
